--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,8 @@
             ],
             "scripts": [],
             "serviceWorker": true,
-            "ngswConfigPath": "ngsw-config.json"
+            "ngswConfigPath": "ngsw-config.json",
+            "webWorkerTsConfig": "tsconfig.worker.json"
           },
           "configurations": {
             "production": {
@@ -145,7 +146,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "webWorkerTsConfig": "tsconfig.worker.json"
           }
         },
         "ionic-cordova-serve": {
@@ -174,5 +176,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
