--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/service-worker": "^14.1.0",
     "@capacitor/android": "^4.0.1",
     "@capacitor/angular": "^2.0.3",
+    "@capacitor/app": "^4.0.1",
     "@capacitor/core": "latest",
+    "@capacitor/preferences": "^4.0.1",
     "@ionic/angular": "^6.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
